--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,11 +32,16 @@
   }
 }
 
-@media (prefers-color-scheme: light) {
+/* TODO: design a light color scheme */
+/* @media (prefers-color-scheme: light) {
   :root {
     --background: var(--color-white);
     --foreground: var(--color-dark-gray);
   }
+} */
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -46,10 +51,10 @@ body {
 
 /* Hide scrollbars */
 .hide-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;     /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .hide-scrollbar::-webkit-scrollbar {
-  display: none;             /* Chrome, Safari and Opera */
+  display: none; /* Chrome, Safari and Opera */
 }
