Change background color for portfolio section

--- a/src/app/colors.css
+++ b/src/app/colors.css
@@ -1,4 +1,4 @@
-/* For now use secondary color for all icons, but these are the official colors if they're ever needed */
+/* For now use tertiary color for all icons, but these are the official colors if they're ever needed */
 
 :root {
   --color-black: #171717;
