--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@
   --color-dark-gray: #020e23;
   --color-white: #fbfbff;
   --color-primary: #19202f;
-  --color-secondary: #da627d;
-  --color-tertiary: #70b77e;
+  --color-secondary: #2d3242;
+  --color-tertiary: #da627d;
 }
 
 /*
